Used Shaping Up with Angular Completed courses to build a store: Created in a Google Material Design Idea

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+body {
+  background-color: #d3d3d3;
+}
 header {
   width: 100%;
   z-index: 10000;
@@ -9,6 +12,8 @@ header {
 }
 header #logo {
   display: inline-block;
+  margin: -10px 6% 0px;
+  line-height: 60px;
 }
 header #navbar {
   background-color: #212121;
@@ -35,17 +40,48 @@ main {
   width: 90%;
   margin: auto;
 }
-main .nav-pills {
+main .nav-tabs {
   background-color: transparent;
-  margin: 8px;
+  margin: 5px auto;
+  width: 100%;
+  border-bottom: none;
+}
+main .nav-tabs li {
+  display: inline-block;
+  margin: 0 4.5%;
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
   border-radius: 7px;
 }
+main .nav-tabs li.active a {
+  padding: 8px 20px;
+  border: none;
+  border-bottom: 1px solid #545454;
+}
+main .nav-tabs li.active a:hover,
+main .nav-tabs li.active afocus {
+  border: none;
+  border-bottom: 1px solid #545454;
+}
+main .nav-tabs li a {
+  text-decoration: none;
+  padding: 5px 0 7px 0;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+}
+main .nav-tabs li a:hover {
+  background-color: transparent;
+  border: none;
+}
 main .panel-primary {
   height: 400px;
 }
-main .list-group-item {
+main .list-group {
+  width: 500px;
+  margin: auto;
+}
+main .list-group .list-group-item {
   width: 100%;
   margin: 20px 0;
   background-color: #ffffff;
@@ -54,14 +90,24 @@ main .list-group-item {
   border-radius: 5px;
   box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.4);
 }
-main .list-group-item:first-child {
+main .list-group .list-group-item:first-child {
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
-.rounded {
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
+main blockquote {
+  padding: 0;
+  margin: 0;
+  border: none;
+  font-size: 1em;
+}
+main .form-group {
+  width: 100%;
+  margin-bottom: 12px;
+}
+main select,
+main textarea {
+  width: 100%;
+  margin-bottom: 12px;
 }
 blockquote {
   font-size: 1.5em;
