--- a/styles/home.less
+++ b/styles/home.less
@@ -1,3 +1,7 @@
+body {
+	background-color: #d3d3d3;
+} //body
+
 header{ 
 	width: 100%;
 	z-index: 10000;
@@ -9,7 +13,9 @@ header{
 
 	#logo {
 		display: inline-block;
-	}
+		margin: -10px 6% 0px;
+		line-height: @navbar-height;
+	} //logo
 
 	#navbar {
 		background-color: @nav-base;
