--- a/styles/main.less
+++ b/styles/main.less
@@ -2,34 +2,90 @@ main {
 	width: 90%;
 	margin: auto;
 
-	.nav-pills {
+	.nav-tabs {
 		background-color: transparent;
-		margin: 8px;
-		//.rounded;
-		-webkit-border-radius: 7px;
-  		-moz-border-radius: 7px;
-   		border-radius: 7px;
-	}
+		margin: 5px auto;
+   		width: 100%;
+   		border-bottom: none;
+
+   		li{
+   			display: inline-block;
+   			margin: 0 4.5%;
+   			-webkit-border-radius: 7px;
+  			-moz-border-radius: 7px;
+   			border-radius: 7px;
+
+   			&.active {
+	   		
+	   			a{
+	   				padding: 8px 20px;
+	   				border: none;
+	   				border-bottom: 1px solid @nav-accent;
+
+	   				&:hover, &focus {
+	   					border: none;
+	   					border-bottom: 1px solid @nav-accent;
+
+	   				} // hover, focus
+	   			} //a
+	   		} //active
+   			
+   			a{
+   				text-decoration: none;
+   				padding: 5px 0 7px 0;
+   				border-top: none;
+   				border-right: none;
+   				border-left: none;
+
+   				&:hover {
+	   				background-color: transparent;
+	   				border: none;
+	   			} //hover
+
+   			} //a
+   		} // li
+	} // tabs
 
 	.panel-primary {
 		height: 400px;
 
 	} //panel-primary
 
-	.list-group-item{
-		width:100%;
-		margin: 20px 0;
-		background-color: @gray-lighter;
-		//.rounded
-		-webkit-border-radius: 5px;
-  		-moz-border-radius: 5px;
-   		border-radius: 5px;
-   		box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.4);
-   		
-   		&:first-child{
-	   		border-top-left-radius: 5px;
-	   		border-top-right-radius: 5px;
-   		} // list-group-item:first-child
+	.list-group{
 
+		width: 500px;
+		margin: auto;
+
+		.list-group-item{
+			width:100%;
+			margin: 20px 0;
+			background-color: @gray-lighter;
+			-webkit-border-radius: 5px;
+	  		-moz-border-radius: 5px;
+	   		border-radius: 5px;
+	   		box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.4);
+	   		
+	   		&:first-child{
+		   		border-top-left-radius: 5px;
+		   		border-top-right-radius: 5px;
+	   		} // list-group-item:first-child
+   		} //list-group
 	} //list-group-item
+
+	blockquote {
+		padding: 0;
+		margin: 0;
+		border: none;
+		font-size: 1em;
+	} //blockquote
+
+	.form-group {
+		width:100%;
+		margin-bottom: 12px;
+	} //form-group
+
+	select, textarea {
+		width:100%;
+		margin-bottom: 12px;
+	} //select, textarea
 } //main
