--- a/styles/main.less
+++ b/styles/main.less
@@ -72,6 +72,18 @@ main {
    		} //list-group
 	} //list-group-item
 
+	
+	.img-wrap{
+		img{
+			padding-left: 31%;
+		}
+	}
+
+	.thumbnail {
+		width: 80px;
+		margin: 25px 10px;
+	}
+
 	blockquote {
 		padding: 0;
 		margin: 0;
