added roboto font

--- a/styles/style.css
+++ b/styles/style.css
@@ -99,7 +99,7 @@ main .img-wrap img {
 }
 main .thumbnail {
   width: 80px;
-  margin: auto 10px;
+  margin: 25px 10px;
 }
 main blockquote {
   padding: 0;
