--- a/styles/variables.less
+++ b/styles/variables.less
@@ -29,8 +29,8 @@
 
 /**********  Font  **************/
 
-@font-family:  "Helvetica Neue", Helvetica, Arial, sans-serif;
-@font-size:          14px;
+@font-family:  			  'Roboto', sans-serif;
+@font-size:          	  14px;
 @font-size-large:         ceil((@font-size * 1.25)); // ~18px
 @font-size-small:         ceil((@font-size * 0.85)); // ~12px
 
