--- a/styles/variables.less
+++ b/styles/variables.less
@@ -6,7 +6,7 @@
 
 /******** Nav ************/
 
-@nav-base:               #212121;
+@nav-base:               #00796B;
 @nav-text:				 #eeeeee;
 @nav-darker:             lighten(@nav-base, 13.5%); // #222
 @nav-accent:             lighten(@nav-base, 20%);   // #333
