updated tabs to Google Standard, started form element upgrade to Google/Material Standard

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -1,365 +1,19 @@
-/********* Variable **************/
+// Body
+@container: 80%;
 
-@container:				width: 80%;
+//Colors
+@nav-base:		#00796B;
+@nav-text:		#eeeeee;
+@nav-accent: 	lighten(@nav-base, 20%);
+@tab-main:		rgba(0, 121, 107, 0.7);
+@gray-lighter:	lighten(@nav-base, 93.5%);
 
-/********* Colors *************/
+// Fonts
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700);
 
-/******** Nav ************/
+@font-family:	'Roboto', sans-serif;
+@font-size:     14px;
 
-@nav-base:               #00796B;
-@nav-text:				 #eeeeee;
-@nav-darker:             lighten(@nav-base, 13.5%); // #222
-@nav-accent:             lighten(@nav-base, 20%);   // #333
-@gray:                   lighten(@nav-base, 33.5%); // #555
-@gray-light:             lighten(@nav-base, 46.7%); // #777
-@gray-lighter:           lighten(@nav-base, 93.5%); // #eee
+// navbar
+@navbar-height:	60px;
 
-@brand-primary:         darken(#2196f3, 6.5%); // 
-
-@body-bg:               #eceff1;
-
-@text-color:            @nav-accent;
-
-/**********   Links   **************/
-
-@link-color:            @brand-primary;
-@link-hover-color:      darken(@link-color, 15%);
-@link-hover-decoration: underline;
-
-
-/**********  Font  **************/
-
-@font-family:  			  'Roboto', sans-serif;
-@font-size:          	  14px;
-@font-size-large:         ceil((@font-size * 1.25)); // ~18px
-@font-size-small:         ceil((@font-size * 0.85)); // ~12px
-
-@font-size-h1:            floor((@font-size * 2.6)); // ~36px
-@font-size-h2:            floor((@font-size * 2.15)); // ~30px
-@font-size-h3:            ceil((@font-size * 1.7)); // ~24px
-@font-size-h4:            ceil((@font-size * 1.25)); // ~18px
-@font-size-h5:            @font-size;
-@font-size-h6:            ceil((@font-size * 0.85)); // ~12px
-
-/**********  Component **************/
-
-@line-height-base:        1.428571429; 
-@line-height-computed:    floor((@font-size * @line-height-base)); // ~20px
-
-@headings-font-family:    inherit;
-@headings-font-weight:    500;
-@headings-line-height:    1.1;
-@headings-color:          inherit;
-
-/**********  Padding **************/
-
-@padding-base-vertical:     6px;
-@padding-base-horizontal:   12px;
-
-@padding-large-vertical:    10px;
-@padding-large-horizontal:  16px;
-
-@padding-small-vertical:    5px;
-@padding-small-horizontal:  10px;
-
-@padding-xs-vertical:       1px;
-@padding-xs-horizontal:     5px;
-
-@line-height-large:         1.3333333; // extra decimals for Win 8.1 Chrome
-@line-height-small:         1.5;
-
-@border-radius-base:        4px;
-@border-radius-large:       6px;
-@border-radius-small:       3px;
-
-@component-active-color:    #fff;
-@component-active-bg:       @brand-primary;
-
-@caret-width-base:          4px;
-@caret-width-large:         5px;
-
-/**********  Buttons **************/
-
-@btn-font-weight:                normal;
-
-@btn-default-color:              @brand-primary;
-@btn-default-bg:                 @brand-primary;
-@btn-default-border:             @nav-accent;
-
-// Allows for customizing button radius independently from global border radius
-@btn-border-radius-base:         @border-radius-base;
-@btn-border-radius-large:        @border-radius-large;
-@btn-border-radius-small:        @border-radius-small;
-
-
-/**********  Forms **************/
-
-@input-bg:                       #fff;
-@input-bg-disabled:              @gray-lighter;
-
-@input-color:                    @gray;  //text color
-@input-border:                   #ccc; //border color
-
-@input-border-radius:            @border-radius-base;
-@input-border-radius-large:      @border-radius-large; //** Large `.form-control` border radius
-@input-border-radius-small:      @border-radius-small; //** Small `.form-control` border radius
-
-@input-border-focus:             #66afe9;
-
-@input-color-placeholder:        #999;
-
-@input-height-base:              (@line-height-computed + (@padding-base-vertical * 2) + 2);
-@input-height-large:             (ceil(@font-size-large * @line-height-large) + (@padding-large-vertical * 2) + 2);
-@input-height-small:             (floor(@font-size-small * @line-height-small) + (@padding-small-vertical * 2) + 2);
-
-@form-group-margin-bottom:       15px;
-
-@legend-color:                   @nav-accent;
-@legend-border-color:            #e5e5e5;
-
-@input-group-addon-bg:           @gray-lighter;
-@input-group-addon-border-color: @input-border;
-
-//** Disabled cursor for form controls and buttons.
-@cursor-disabled:                not-allowed;
-
-/**********  Z-Master List **************/
-
-@zindex-navbar:            1000;
-@zindex-dropdown:          1000;
-@zindex-popover:           1060;
-@zindex-tooltip:           1070;
-@zindex-navbar-fixed:      1030;
-@zindex-modal-background:  1040;
-@zindex-modal:             1050;
-
-
-/**********  Media Queries **************/
-
-@screen-xs:                  480px;
-@screen-xs-min:              @screen-xs;
-@screen-phone:               @screen-xs-min;
-
-@screen-sm:                  768px;
-@screen-sm-min:              @screen-sm;
-@screen-tablet:              @screen-sm-min;
-
-@screen-md:                  992px;
-@screen-md-min:              @screen-md;
-@screen-desktop:             @screen-md-min;
-
-@screen-lg:                  1200px;
-@screen-lg-min:              @screen-lg;
-@screen-lg-desktop:          @screen-lg-min;
-
-// So media queries don't overlap when required, provide a maximum
-@screen-xs-max:              (@screen-sm-min - 1);
-@screen-sm-max:              (@screen-md-min - 1);
-@screen-md-max:              (@screen-lg-min - 1);
-
-
-/**********  Grid **************/
-
-@grid-columns:              12;
-@grid-gutter-width:         30px;
-
-@grid-float-breakpoint:     @screen-sm-min;
-@grid-float-breakpoint-max: (@grid-float-breakpoint - 1);
-
-
-/**********  Navbar **************/
-
-@navbar-height:                    60px;
-@navbar-margin-bottom:             @line-height-computed;
-@navbar-border-radius:             @border-radius-base;
-@navbar-padding-horizontal:        floor((@grid-gutter-width / 2));
-@navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
-@navbar-collapse-max-height:       340px;
-
-@navbar-default-color:             @nav-accent;
-@navbar-default-bg:                @nav-base;
-@navbar-default-border:            darken(@nav-accent, 6.5%);
-
-/**********  Pills **************/
-
-@nav-pills-border-radius:                   @border-radius-base;
-@nav-pills-active-link-hover-bg:            @component-active-bg;
-@nav-pills-active-link-hover-color:         @component-active-color;
-
-/**********  Popovers **************/
-
-//** Popover body background color
-@popover-bg:                          #fff;
-//** Popover maximum width
-@popover-max-width:                   276px;
-//** Popover border color
-@popover-border-color:                rgba(0,0,0,.2);
-//** Popover fallback border color
-@popover-fallback-border-color:       #ccc;
-
-//** Popover title background color
-@popover-title-bg:                    darken(@popover-bg, 3%);
-
-//** Popover arrow width
-@popover-arrow-width:                 10px;
-//** Popover arrow color
-@popover-arrow-color:                 @popover-bg;
-
-//** Popover outer arrow width
-@popover-arrow-outer-width:           (@popover-arrow-width + 1);
-//** Popover outer arrow color
-@popover-arrow-outer-color:           fadein(@popover-border-color, 5%);
-//** Popover outer arrow fallback color
-@popover-arrow-outer-fallback-color:  darken(@popover-fallback-border-color, 20%);
-
-/**********  Modal Windows **************/
-
-//** Padding applied to the modal body
-@modal-inner-padding:         15px;
-
-//** Padding applied to the modal title
-@modal-title-padding:         15px;
-//** Modal title line-height
-@modal-title-line-height:     @line-height-base;
-
-//** Background color of modal content area
-@modal-content-bg:                             #fff;
-//** Modal content border color
-@modal-content-border-color:                   rgba(0,0,0,.2);
-//** Modal content border color **for IE8**
-@modal-content-fallback-border-color:          #999;
-
-//** Modal backdrop background color
-@modal-backdrop-bg:           #000;
-//** Modal backdrop opacity
-@modal-backdrop-opacity:      .5;
-//** Modal header border color
-@modal-header-border-color:   #e5e5e5;
-//** Modal footer border color
-@modal-footer-border-color:   @modal-header-border-color;
-
-@modal-lg:                    900px;
-@modal-md:                    600px;
-@modal-sm:                    300px;
-
-/********** List Group **************/
-
-//** Background color on `.list-group-item`
-@list-group-bg:                 #fff;
-//** `.list-group-item` border color
-@list-group-border:             #ddd;
-//** List group border radius
-@list-group-border-radius:      @border-radius-base;
-
-//** Background color of single list items on hover
-@list-group-hover-bg:           #f5f5f5;
-//** Text color of active list items
-@list-group-active-color:       @component-active-color;
-//** Background color of active list items
-@list-group-active-bg:          @component-active-bg;
-//** Border color of active list elements
-@list-group-active-border:      @list-group-active-bg;
-//** Text color for content within active list items
-@list-group-active-text-color:  lighten(@list-group-active-bg, 40%);
-
-//** Text color of disabled list items
-@list-group-disabled-color:      @gray-light;
-//** Background color of disabled list items
-@list-group-disabled-bg:         @gray-lighter;
-//** Text color for content within disabled list items
-@list-group-disabled-text-color: @list-group-disabled-color;
-
-@list-group-link-color:         #555;
-@list-group-link-hover-color:   @list-group-link-color;
-@list-group-link-heading-color: #333;
-
-/**********  Panels **************/
-
-@panel-bg:                    #fff;
-@panel-body-padding:          15px;
-@panel-heading-padding:       10px 15px;
-@panel-footer-padding:        @panel-heading-padding;
-@panel-border-radius:         @border-radius-base;
-
-//** Border color for elements within panels
-@panel-inner-border:          #ddd;
-@panel-footer-bg:             #f5f5f5;
-
-@panel-default-text:          @nav-accent;
-@panel-default-border:        #ddd;
-@panel-default-heading-bg:    #f5f5f5;
-
-/**********  Padding **************/
-
-//** Padding around the thumbnail image
-@thumbnail-padding:           4px;
-//** Thumbnail background color
-@thumbnail-bg:                @body-bg;
-//** Thumbnail border color
-@thumbnail-border:            #ddd;
-//** Thumbnail border radius
-@thumbnail-border-radius:     @border-radius-base;
-
-//** Custom text color for thumbnail captions
-@thumbnail-caption-color:     @text-color;
-//** Padding around the thumbnail caption
-@thumbnail-caption-padding:   9px;
-
-/**********  Breadcrumbs **************/
-
-@breadcrumb-padding-vertical:   8px;
-@breadcrumb-padding-horizontal: 15px;
-//** Breadcrumb background color
-@breadcrumb-bg:                 #f5f5f5;
-//** Breadcrumb text color
-@breadcrumb-color:              #ccc;
-//** Text color of current page in the breadcrumb
-@breadcrumb-active-color:       @gray-light;
-//** Textual separator for between breadcrumb elements
-@breadcrumb-separator:          "/";
-
-/**********  close **************/
-
-@close-font-weight:           bold;
-@close-color:                 #000;
-@close-text-shadow:           0 1px 0 #fff;
-
-
-/**********  code **************/
-
-@code-color:                  #c7254e;
-@code-bg:                     #f9f2f4;
-
-@kbd-color:                   #fff;
-@kbd-bg:                      #333;
-
-@pre-bg:                      #f5f5f5;
-@pre-color:                   @nav-accent;
-@pre-border-color:            #ccc;
-@pre-scrollable-max-height:   340px;
-
-
-/**********  type **************/
-
-//** Horizontal offset for forms and lists.
-@component-offset-horizontal: 180px;
-//** Text muted color
-@text-muted:                  @gray-light;
-//** Abbreviations and acronyms border color
-@abbr-border-color:           @gray-light;
-//** Headings small color
-@headings-small-color:        @gray-light;
-//** Blockquote small color
-@blockquote-small-color:      @gray-light;
-//** Blockquote font size
-@blockquote-font-size:        (@font-size * 1.25);
-//** Blockquote border color
-@blockquote-border-color:     @gray-lighter;
-//** Page header border color
-@page-header-border-color:    @gray-lighter;
-//** Width of horizontal description list titles
-@dl-horizontal-offset:        @component-offset-horizontal;
-//** Point at which .dl-horizontal becomes horizontal
-@dl-horizontal-breakpoint:    @grid-float-breakpoint;
-//** Horizontal line color.
-@hr-border:                   @gray-lighter;
