--- a/styles/main.less
+++ b/styles/main.less
@@ -2,47 +2,59 @@ main {
 	width: 90%;
 	margin: auto;
 
-	.nav-tabs {
+
+	.tabs {
 		background-color: transparent;
-		margin: 5px auto;
    		width: 100%;
    		border-bottom: none;
+   		padding-left: 0px;
 
    		li{
+   			height: 48px;
    			display: inline-block;
-   			margin: 0 4.5%;
-   			-webkit-border-radius: 7px;
-  			-moz-border-radius: 7px;
-   			border-radius: 7px;
-
-   			&.active {
-	   		
-	   			a{
-	   				padding: 8px 20px;
-	   				border: none;
-	   				border-bottom: 1.5px solid @nav-accent;
-
-	   				&:hover, &focus {
-	   					border: none;
-	   					border-bottom: 1px solid @nav-accent;
-
-	   				} // hover, focus
-	   			} //a
-	   		} //active
+   			text-align: center;
+   			width: 32.8%;
+   			max-width: 264px;
+   			min-width: 72px;
    			
-   			a{
-   				text-decoration: none;
-   				padding: 5px 0 7px 0;
-   				border-top: none;
-   				border-right: none;
-   				border-left: none;
 
+   			a{
+   				width: 33%;
+   				padding: 10px 12px 18px;
+   				font-size: 14px;
+   				text-transform: uppercase;
+   				text-decoration: none;
+   				color: @tab-main;
+   				outline: none;
+   				
    				&:hover {
 	   				background-color: transparent;
 	   				border: none;
 	   			} //hover
 
    			} //a
+
+   			&.active {
+	   		
+	   			a{
+	   				color: @nav-accent;
+	   				border: none;
+	   				border-bottom: 2px solid @nav-accent;
+
+	   				
+
+	   				&:hover, &:focus, &:active {
+	   					border: none;
+	   					border-bottom: 2px solid @nav-accent;
+	   					outline: 0;
+	   					-moz-outline-style: none;
+
+
+	   				} // hover, focus
+	   			} //a
+	   		} //active
+   			
+
    		} // li
 	} // tabs
 
@@ -99,5 +111,26 @@ main {
 	select, textarea {
 		width:100%;
 		margin-bottom: 12px;
+		padding: 16px 0 16px 24px;
+		margin-right: 16px;
+		border-top: 1px solid #bdbdbd;
+		border-right: none;
+		border-bottom: 1px solid #bdbdbd;
+		border-left: none;
+
+		&:active, &:hover, &:focus {
+			background-color: @nav-text;
+		}
+
+		&:before, &:after {
+			border: none;
+		}
+
+
+		option{
+			padding-top: 12px;
+			padding-bottom: 12px;
+
+		}
 	} //select, textarea
 } //main
