--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700);
 body {
   background-color: #d3d3d3;
+  font-family: 'Roboto', sans-serif;
 }
 header {
   width: 100%;
@@ -40,39 +42,45 @@ main {
   width: 90%;
   margin: auto;
 }
-main .nav-tabs {
+main .tabs {
   background-color: transparent;
-  margin: 5px auto;
   width: 100%;
   border-bottom: none;
+  padding-left: 0px;
 }
-main .nav-tabs li {
+main .tabs li {
+  height: 48px;
   display: inline-block;
-  margin: 0 4.5%;
-  -webkit-border-radius: 7px;
-  -moz-border-radius: 7px;
-  border-radius: 7px;
+  text-align: center;
+  width: 32.8%;
+  max-width: 264px;
+  min-width: 72px;
 }
-main .nav-tabs li.active a {
-  padding: 8px 20px;
-  border: none;
-  border-bottom: 1.5px solid #00dfc5;
-}
-main .nav-tabs li.active a:hover,
-main .nav-tabs li.active afocus {
-  border: none;
-  border-bottom: 1px solid #00dfc5;
-}
-main .nav-tabs li a {
+main .tabs li a {
+  width: 33%;
+  padding: 10px 12px 18px;
+  font-size: 14px;
+  text-transform: uppercase;
   text-decoration: none;
-  padding: 5px 0 7px 0;
-  border-top: none;
-  border-right: none;
-  border-left: none;
+  color: rgba(0, 121, 107, 0.7);
+  outline: none;
 }
-main .nav-tabs li a:hover {
+main .tabs li a:hover {
   background-color: transparent;
   border: none;
+}
+main .tabs li.active a {
+  color: #00dfc5;
+  border: none;
+  border-bottom: 2px solid #00dfc5;
+}
+main .tabs li.active a:hover,
+main .tabs li.active a:focus,
+main .tabs li.active a:active {
+  border: none;
+  border-bottom: 2px solid #00dfc5;
+  outline: 0;
+  -moz-outline-style: none;
 }
 main .panel-primary {
   height: 400px;
@@ -115,6 +123,31 @@ main select,
 main textarea {
   width: 100%;
   margin-bottom: 12px;
+  padding: 16px 0 16px 24px;
+  margin-right: 16px;
+  border-top: 1px solid #bdbdbd;
+  border-right: none;
+  border-bottom: 1px solid #bdbdbd;
+  border-left: none;
+}
+main select:active,
+main textarea:active,
+main select:hover,
+main textarea:hover,
+main select:focus,
+main textarea:focus {
+  background-color: #eeeeee;
+}
+main select:before,
+main textarea:before,
+main select:after,
+main textarea:after {
+  border: none;
+}
+main select option,
+main textarea option {
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
 blockquote {
   font-size: 1.5em;
@@ -126,26 +159,3 @@ blockquote {
   clear: both;
   visibility: hidden;
 }
-/********* Variable **************/
-/********* Colors *************/
-/******** Nav ************/
-/**********   Links   **************/
-/**********  Font  **************/
-/**********  Component **************/
-/**********  Padding **************/
-/**********  Buttons **************/
-/**********  Forms **************/
-/**********  Z-Master List **************/
-/**********  Media Queries **************/
-/**********  Grid **************/
-/**********  Navbar **************/
-/**********  Pills **************/
-/**********  Popovers **************/
-/**********  Modal Windows **************/
-/********** List Group **************/
-/**********  Panels **************/
-/**********  Padding **************/
-/**********  Breadcrumbs **************/
-/**********  close **************/
-/**********  code **************/
-/**********  type **************/
