Updated Input and Textarea fields to match Google Material Standards.  Made a start rating system

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -2,10 +2,10 @@
 @container: 80%;
 
 //Colors
-@nav-base:		#00796B;
+@nav-base:		#01579B;
 @nav-text:		#eeeeee;
-@nav-accent: 	lighten(@nav-base, 20%);
-@tab-main:		rgba(0, 121, 107, 0.7);
+@nav-accent: 	#4caf50;
+@tab-main:		rgba(76, 175, 80, 0.7);
 @gray-lighter:	lighten(@nav-base, 93.5%);
 
 
