--- a/styles/home.less
+++ b/styles/home.less
@@ -16,6 +16,11 @@ header{
 		display: inline-block;
 		margin: -10px 6% 0px;
 		line-height: @navbar-height;
+
+		h1 {
+			font-size: 20px;
+			font-weight: 500;
+		}
 	} //logo
 
 	#navbar {
